# Dictionary

./: CMakeLists.txt  README.md
Projects/: CMakeLists.txt
Projects/Dictionary/: CMakeLists.txt  ZDDictionary.h  main.cpp
Projects/Dictionary/Lexico/: Lexico.txt  ZDLexico.h
Projects/Dictionary/Tree/: ZDTree.h
config/cmake/: ZDCMakeUtils.cmake
config/cmake/modules/: ZDCMakeUtilsBaseFunctions.cmake
